:memo: Update JVM_OPTIONS.md